Fix alignment of for hire label

--- a/website/static/less/site.less
+++ b/website/static/less/site.less
@@ -429,8 +429,8 @@ body#search #content {
         .results-header {
             font-size: 20px;
             .label.for-hire {
-                vertical-align: middle;
-                margin: 0 0 5px 5px;
+                vertical-align: top;
+                margin: 0 0 0 5px;
             }
         }
         .results-subheader {
